--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.2.1",
     "cookie-session": "^2.0.0",
@@ -18,17 +19,21 @@
     "express": "^4.17.3",
     "flag-icon-css": "^4.1.7",
     "jsonwebtoken": "^8.5.1",
+    "localtunnel": "^2.0.2",
     "mongoose": "^5.13.14",
+    "mongoose-to-swagger": "^1.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.29.0",
     "react-meta-tags": "^1.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "server": "node server.js",
+    "server": "node index.js",
     "client": "react-scripts start",
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "build": "react-scripts build",
