--- a/package.json
+++ b/package.json
@@ -24,12 +24,16 @@
     "mongoose-to-swagger": "^1.4.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-hook-form": "^7.29.0",
+    "react-hook-form": "^7.36.1",
     "react-meta-tags": "^1.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
+    "react-loading-icons": "^1.1.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0",
+    "sweetalert": "^2.1.2",
+    "bootstrap": "^5.2.1",
+    "react-bootstrap": "^2.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
