--- a/package.json
+++ b/package.json
@@ -1,42 +1,30 @@
 {
-  "name": "back",
+  "name": "rates-2024",
   "version": "0.1.0",
   "private": true,
-  "main": "app.js",
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.1.1",
-    "@fortawesome/free-regular-svg-icons": "^6.1.1",
-    "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
+    "axios": "^1.6.2",
     "bcrypt": "^5.0.1",
-    "bcryptjs": "^2.4.3",
-    "bootstrap": "^5.2.1",
     "concurrently": "^7.2.1",
-    "cookie-session": "^2.0.0",
-    "cors": "^2.8.5",
-    "express": "^4.17.3",
-    "flag-icon-css": "^4.1.7",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^8.5.1",
-    "localtunnel": "^2.0.2",
     "mongoose": "^5.13.14",
-    "mongoose-to-swagger": "^1.4.0",
-    "react": "^18.1.0",
-    "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "cors": "^2.8.5",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.3.1",
-    "react-loading-icons": "^1.1.0",
-    "react-meta-tags": "^1.0.1",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
-    "swagger-jsdoc": "^6.2.5",
-    "swagger-ui-express": "^4.5.0",
+    "react-router-dom": "^6.21.1",
+    "react-scripts": "5.0.1",
+    "socket.io": "^3.1.2",
+    "socket.io-client": "^4.7.2",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.8",
-    "web-vitals": "^2.1.4" 
+    "web-vitals": "^2.1.4",
+    "ws": "^7.4.1"
   },
   "scripts": {
     "server": "node index.js",
